--- a/src/App.css
+++ b/src/App.css
@@ -39,4 +39,14 @@
 
 button {
   width: 33%;
+  background-color: peachpuff;
+  color:black;
+}
+
+
+#calculator {
+  background-color: rgb(108, 169, 173);
+  margin:2em;
+  padding:5px;
+  border:5px solid black;
 }
